--- a/templates/building/new.html.twig
+++ b/templates/building/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('building/_form.html.twig') }}
 
-    <a href="{{ path('building_index') }}">back to list</a>
+    <a href="{{ path('region_show', {'id': region.id}) }}">back to the Region</a>
 {% endblock %}
