--- a/templates/building/show.html.twig
+++ b/templates/building/show.html.twig
@@ -15,12 +15,12 @@
                 <th>Life</th>
                 <td>{{ building.life }}</td>
             </tr>
+            <tr>
+                <th>Type</th>
+                <td>{{ building.buildingType.name }}</td>
+            </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('building_index') }}">back to list</a>
-
-    <a href="{{ path('building_edit', {'id': building.id}) }}">edit</a>
-
-    {{ include('building/_delete_form.html.twig') }}
+    <a href="{{ path('region_show', {'id': building.region.id}) }}">back to the Region</a>
 {% endblock %}
